<?xml version="1.0"?>
<package format="2">
  <name>landmark_publisher</name>
  <version>0.0.0</version>
  <description>The landmark_publisher package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="miro@todo.todo">miro</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>cartographer_ros_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>unique_id</build_depend>
  <build_depend>uuid_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>vision_opencv</build_depend>
  <build_depend>ouster_client</build_depend>
  <build_depend>ouster_viz</build_depend>
  <build_depend>ouster_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>ouster_client</exec_depend>
  <exec_depend>ouster_viz</exec_depend>
  <exec_depend>ouster_ros</exec_depend>
  <exec_depend>cartographer_ros_msgs</exec_depend>
  <exec_depend>unique_id</exec_depend>
  <exec_depend>uuid_msgs</exec_depend>
  <exec_depend>vision_opencv</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
